add cloud gateway